infra/k8s/base/policies/constraints/disallow-latest.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowLatest
metadata:
  name: disallow-latest
spec:
  enforcementAction: deny
